# tsrkit-types

./: .gitignore  MANIFEST.in  Makefile  README.md  benchmark.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_types.py  compare.py  profiler.py
pytypes/: bits.py  bool.py  bytes.py  choice.py  dictionary.py  enum.py  integers.py  option.py  sequences.py  string.py  struct.py
pytypes/decorators/: with_json_metadata.py
tests/: conftest.py  test_bits.py  test_bytearray.py  test_choices.py  test_containers.py  test_enum_struct.py  test_enums.py  test_int_comparison.py  test_integers.py  test_native_optional.py  test_network.py  test_security.py  test_seq.py  test_strings.py  test_struct.py  test_structs.py
tests/type_hints/: test_struct_serde.py
tsrkit_types/: __init__.py  _native.c  bits.py  bytearray.py  bytes.py  bytes_common.py  c_integers.py  choice.py  config.py  constants.py  dictionary.py  enum.py  integers.py  null.py  option.py  sequences.py  string.py  struct.py
tsrkit_types/itf/: codable.pyi
