[project]
name = "tsrkit-types"
version = "0.1.0"
description = ""
authors = [
    {name = "prasad-kumkar",email = "prasad@chainscore.finance"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
